updated russian project pages

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -9,7 +9,7 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
-    - Archlinux <a href="https://aur.archlinux.org/packages/git-etc">AUR package</a>
+    - Archlinux <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR package</a>
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Information</h2>
@@ -28,6 +28,7 @@ Parametrs:
 
 See "man 1 git-etc" for more details
 {% endhighlight %}
+
 {% highlight bash %}
 $ ctrlconf --help
 GUI for git-etc daemon
