--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -52,7 +52,7 @@ Show messages:
    -h           --help                   - show this help and exit
 {% endhighlight %}
 
-<h3><a class="anchor" href="#devel" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
+<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
