--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -93,7 +93,7 @@ kbuildsycoca4 &> /dev/null
 <!-- gui block -->
 <h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Graphical user interface</h2>
 
-<h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+<h3><a href="#screenshots" class="anchor" name="screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h3>
 <div class="thumbnails">
   {% assign scrdesc = "Widget" %}
   {% assign scrname = "oblikuestrategies_widget" %}
