--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -10,11 +10,12 @@ developers:
     - Evgeniy Alelseev
 license: GPLv3
 links:
-    - Пакет в <a href="https://aur.archlinux.org/packages/git-etc">AUR</a>
+    - Пакет в <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR</a>
 ---
 <!-- info block -->
-<h2><a name="info" class="anchor" href="#info"><span class="octicon octicon-link"></span></a>Информация</h2>
+<h2><a href="#info" class="anchor" name="info"><span class="octicon octicon-link"></span></a>Информация</h2>
 <p>Простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени.</p>
+
 {% highlight bash %}
 $ git-etc --help
 Simple daemon written on BASH for monitoring changes in files
@@ -28,6 +29,7 @@ Parametrs:
 
 See "man 1 git-etc" for more details
 {% endhighlight %}
+
 {% highlight bash %}
 $ ctrlconf --help
 GUI for git-etc daemon
@@ -42,37 +44,41 @@ Additional parametrs:
 See "man 1 ctrlconf" for more details
 {% endhighlight %}
 
-<h3><a name="devel" class="anchor" href="#devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
+<h3><a href="#devel" class="anchor" name="devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
 <ul>
   {% for devel in page.developers %}
     <li>{{ devel }}</li>
   {% endfor %}
 </ul>
 
-<h3><a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>Лицензия</h3>
+<h3><a href="#license" class="anchor" name="license"><span class="octicon octicon-link"></span></a>Лицензия</h3>
 <ul>
   <li>{{ page.license }}</li>
 </ul>
 <!-- end of info block -->
 
 <!-- install block -->
-<h2><a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Установка</h2>
+<h2><a href="#install" class="anchor" name="install"><span class="octicon octicon-link"></span></a>Установка</h2>
 
-<h3><a name="instruction" class="anchor" href="#instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
+<h3><a href="#instruction" class="anchor" name="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li><p>Скачайте <a href="https://github.com/arcan1s/git-etc/releases">архив</a> с актуальной версией исходных файлов.</p></li>
+  <li><p>Скачайте <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</p></li>
   <li><p>Извлеките из него файлы и установите приложение:</p>
+
 {% highlight bash %}
 ./install.sh "/путь/к/корню/"
 {% endhighlight %}
+
 <p>Если Вы хотите установить в <code>/</code>, Вы должны запустить это, как root:</p>
+
 {% highlight bash %}
 sudo ./install.sh
 {% endhighlight %}
+
 <p>Если путь не указан, пакет будет установлен в <code>/</code>.</p></li>
 </ul>
 
-<h3><a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
+<h3><a href="#dependencies" class="anchor" name="dependencies"><span class="octicon octicon-link"></span></a>Зависимости</h3>
 <p>Все было протестировано на последних версиях зависимостей.</p>
 <ul>
   <li>Bash (включая awk, grep, sed)</li>
@@ -85,41 +91,53 @@ sudo ./install.sh
 <!-- end of install block -->
 
 <!-- howto block -->
-<h2><a name="howto" class="anchor" href="#howto"><span class="octicon octicon-link"></span></a>Использование</h2>
+<h2><a href="#howto" class="anchor" name="howto"><span class="octicon octicon-link"></span></a>Использование</h2>
 <p>Если Вы хотите запустить демон в <code>/etc</code>, просто запустите</p>
+
 {% highlight bash %}
 systemctl start git-etc
 {% endhighlight %}
+
 <p>Если Вы хотите включить автозагрузку демона, запутите</p>
+
 {% highlight bash %}
 systemctl enable git-etc
 {% endhighlight %}
+
 <p>Но Вы можете изменить путь к конфигурационному файлу или изменить параметры. Для этого, скопируйте (рекомендуется) исходный конфигурационный файл</p>
+
 {% highlight bash %}
 cp /etc/git-etc.conf /новый/путь/к/git-etc.conf
 {% endhighlight %}
+
 <p>и отредактируйте его. Затем скопируйте исходный service-файл в <code>/etc</code>:</p>
+
 {% highlight bash %}
 cp /usr/lib/systemd/system/git-etc.service /etc/systemd/system/git-etc-my-profile.service
 {% endhighlight %}
+
 <p>Замените следующую строку в этом файле:</p>
+
 {% highlight bash %}
 ExecStart=/usr/bin/git-etc -c /etc/git-etc.conf
 {% endhighlight %}
+
 <p>на</p>
+
 {% highlight bash %}
 ExecStart=/usr/bin/git-etc -c /новый/путь/к/git-etc.conf
 {% endhighlight %}
 <!-- end of howto block -->
 
 <!-- config block -->
-<h2><a name="config" class="anchor" href="#config"><span class="octicon octicon-link"></span></a>Настройка</h2>
+<h2><a href="#config" class="anchor" name="config"><span class="octicon octicon-link"></span></a>Настройка</h2>
 <p>Все настройки хранятся в <code>/etc/git-etc.conf</code>. После редактирования, Вы должны перезапустить демон</p>
+
 {% highlight bash %}
 systemctl restart git-etc
 {% endhighlight %}
 
-<h3><a name="options" class="anchor" href="#options"><span class="octicon octicon-link"></span></a>Опции</h3>
+<h3><a href="#options" class="anchor" name="options"><span class="octicon octicon-link"></span></a>Опции</h3>
 <table>
   <tr>
     <th>DIRECTORY</th>
@@ -141,21 +159,28 @@ systemctl restart git-etc
 <!-- end of config block -->
 
 <!-- gui block -->
-<h2><a name="gui" class="anchor" href="#gui"><span class="octicon octicon-link"></span></a>Графический интерфейс</h2>
+<h2><a href="#gui" class="anchor" name="gui"><span class="octicon octicon-link"></span></a>Графический интерфейс</h2>
 <p>Control Config (<code>ctrlconf</code>) - графический интерфейс для <code>git-etc</code>, написанный на <code>Python2/PyQt4</code>. Данное приложение позволяет Вам увидеть список коммитов и изменения в файлах в данных коммитах. Также данное приложение позволит Вам откатиться на указанный коммит (все файлы, посредством <code>git reset --hard</code>, или только указанный, посредством <code>git diff && git apply</code>). Также Вы можете объединить старый и новый конфигурационные файлы (используются две ветки репозитория master и experimental). Приложение может потребовать привелегии root, убедитесь, что пакет <code>sudo</code> установлен.</p>
 
-<h3><a name="gui_configuration" class="anchor" href="#gui_configuration"><span class="octicon octicon-link"></span></a>Настройка</h3>
+<h3><a href="#gui_configuration" class="anchor" name="gui_configuration"><span class="octicon octicon-link"></span></a>Настройка</h3>
 <p>Запустите приложение и откройте окно настроек из меню.</p>
 
-<h3><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Скриншоты</h3>
-<p>Основное окно:<br>
-<a href="/resources/screenshots/git-etc_mainwindow.png"><img src="/resources/preview/git-etc_mainwindow_prev.jpg"></a><br>
-Окно "О программе":<br>
-<a href="/resources/screenshots/git-etc_aboutwindow.png"><img src="/resources/preview/git-etc_aboutwindow_prev.jpg"></a><br>
-Окно с просмотром изменений при коммите:<br>
-<a href="/resources/screenshots/git-etc_commitwindow.png"><img src="/resources/preview/git-etc_commitwindow_prev.jpg"></a><br>
-Окно объединения:<br>
-<a href="/resources/screenshots/git-etc_mergingwindow.png"><img src="/resources/preview/git-etc_mergingwindow_prev.jpg"></a><br>
-Окно отката:<br>
-<a href="/resources/screenshots/git-etc_rollbackwindow.png"><img src="/resources/preview/git-etc_rollbackwindow_prev.jpg"></a></p>
+<h3><a href="#screenshots" class="anchor" name="screenshots"><span class="octicon octicon-link"></span></a>Скриншоты</h3>
+<div class="thumbnails">
+  {% assign scrdesc = "Основное окно" %}
+  {% assign scrname = "git-etc_mainwindow" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Окно 'О программе'" %}
+  {% assign scrname = "git-etc_aboutwindow" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Окно с просмотром изменений при коммите" %}
+  {% assign scrname = "git-etc_commitwindow" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Окно объединения" %}
+  {% assign scrname = "git-etc_mergingwindow" %}
+  {% include prj_scr.html %}
+  {% assign scrdesc = "Окно отката" %}
+  {% assign scrname = "git-etc_rollbackwindow" %}
+  {% include prj_scr.html %}
+</div>
 <!-- end of gui block -->
